<resources>
    <string name="app_name">HiveLive</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Σύνδεση χρήστη</string>
    <string name="action_settings">Settings</string>
    <string name="login_email">Email address</string>
    <string name="address">Διεύθυνση/Περιοχή</string>
    <string name="login_password">Password</string>
    <string name="login_button">Σύνδεση</string>
    <string name="retrieve_password">Επαναφορά κωδικού</string>
    <string name="send_mail">Αποστολή email επιβεβαίωσης</string>
    <string name="visit_mails">Μετάβαση στα email μου</string>

    <string name="signup_button">Εγγραφή</string>
    <string name="login_title_tv">Συνδεθείτε</string>
    <string name="signup_tittle_tv">Εγγραφή νέου χρήστη</string>
    <string name="login_remind_tv">Υπενθύμιση κωδικού</string>
    <string name="signup_remind_tv">Έχετε ήδη λογαριασμό;</string>
    <string name="signup_name">Ονοματεπώνυμο</string>
    <string name="signup_username">Username</string>
    <string name="signup_repeat_password">Repeat password</string>
    <string name="signup_phone">Τηλέφωνο</string>
    <string name="signup_mobilephone">Κινητό τηλέφωνο</string>
    <string name="snackbar_text_connection">Check your internet connection</string>
    <string name="snackbar_researches_saved">Υπάρχουν απαντημένες έρευνες σε εκκρεμότητα.Αν συνεχίσετε, τα δεδομένα θα χαθούν. </string>
    <string name="snackbar_text_problem">There is a problem with the mobile services.</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="snackbar_action_exit">EXIT</string>
    <string name="snackbar_action_retry">RETRY</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_research">ResearchActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
