<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.extract.hivelive.Fragments.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_color_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/login_fl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
           >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_hive2"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/fragment_login_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_rounded_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title_tv"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/login_email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_rounded_edittext"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/login_password_edt"/>

                <EditText
                    android:id="@+id/login_password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:hint="@string/login_password"
                    android:background="@drawable/custom_rounded_edittext"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:nextFocusDown="@+id/login_button"/>

                <TextView
                    android:id="@+id/login_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Warning here\nand here"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="invisible"/>


                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textAllCaps="false"
                    android:background="@color/nav_color_dark"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">


                    <TextView
                        android:id="@+id/login_remind_password_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_remind_tv"
                        android:layout_alignParentLeft="true"
                        android:textSize="12sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"/>

                    <TextView
                        android:id="@+id/login_signup_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_tittle_tv"
                        android:layout_alignParentRight="true"
                        android:textSize="12sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"/>

                </RelativeLayout>

            </LinearLayout>

            <com.github.rahatarmanahmed.cpv.CircularProgressView
                android:id="@+id/progress_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true"
                app:cpv_color="#2196F3"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>


        </LinearLayout>



    </ScrollView>



</FrameLayout>


